--- a/AVLTree/AVLTree.vcxproj
+++ b/AVLTree/AVLTree.vcxproj
@@ -151,15 +151,20 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="AVL.cpp" />
     <ClCompile Include="AVLTree.cpp" />
     <ClCompile Include="BST.cpp" />
     <ClCompile Include="Node.cpp" />
+    <ClCompile Include="NodeAVL.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="AVL.h" />
     <ClInclude Include="BST.h" />
     <ClInclude Include="Node.h" />
+    <ClInclude Include="NodeAVL.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="AVL.tpp" />
     <None Include="BST.tpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
