--- a/AVLTree/AVLTree.vcxproj.filters
+++ b/AVLTree/AVLTree.vcxproj.filters
@@ -24,9 +24,6 @@
     <ClCompile Include="BST.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="NodeAVL.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="AVL.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -38,9 +35,6 @@
     <ClInclude Include="BST.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="NodeAVL.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="AVL.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -50,6 +44,9 @@
       <Filter>Source Files</Filter>
     </None>
     <None Include="AVL.tpp">
+      <Filter>Source Files</Filter>
+    </None>
+    <None Include="Node.tpp">
       <Filter>Source Files</Filter>
     </None>
   </ItemGroup>
